...
      start = match.range.last + 1
    }
    append(template.substring(start))
  }
  Text(
    text = sentence,
    modifier = Modifier.testTag("rankings_query_sentence"),
    style = Prism.typography.sectionTitle.copy(fontSize = 24.sp, lineHeight = 36.sp),
    color = Prism.color.bodyColor,
  )
}

@Composable
...
